force-app/main/default/objects/Case_Request__c/Case_Request__c.object-meta.xml
<CustomObject>
    <label>Solicitação de caso</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Caso ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitação de casos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>