force-app/main/default/objects/Case_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Conta associada</description>
    <inlineHelpText>Conta associada ao caso.</inlineHelpText>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Solicitação de casos</relationshipLabel>
    <relationshipName>CaseRequest</relationshipName>
    <type>Lookup</type>
</CustomField>