force-app/main/default/objects/Case_Request__c/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <label>Razão do caso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Erro de Sistema</fullName>
            </value>
            <value>
                <fullName>Falha de Hardware</fullName>
            </value>
            <value>
                <fullName>Dificuldade de Acesso</fullName>
            </value>
            <value>
                <fullName>Problemas de Conectividade</fullName>
            </value>
            <value>
                <fullName>Solicitação de Instalação</fullName>
            </value>
            <value>
                <fullName>Atualização de Software</fullName>
            </value>
            <value>
                <fullName>Solicitação de Treinamento</fullName>
            </value>
            <value>
                <fullName>Dúvida Operacional</fullName>
            </value>
            <value>
                <fullName>Incidente de Segurança</fullName>
            </value>
            <value>
                <fullName>Consulta sobre Serviços</fullName>
            </value>
            <value>
                <fullName>Reclamação</fullName>
            </value>
            <value>
                <fullName>Sugestão de Melhoria</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>