force-app/main/default/objects/Case_Request__c/fields/CaseOrigin__c.field-meta.xml
<CustomField>
    <fullName>CaseOrigin__c</fullName>
    <description>Qual a origem do caso.</description>
    <inlineHelpText>Qual a origem do caso.</inlineHelpText>
    <label>Origem do caso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telefone</fullName>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>