force-app/main/default/objects/Case_Request__c/fields/ClosedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ClosedDateTime__c</fullName>
    <label>Data e hora de fechamento</label>
    <type>DateTime</type>
</CustomField>