force-app/main/default/objects/Case_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contato relacionado ao caso</description>
    <inlineHelpText>Contato relacionado ao caso.</inlineHelpText>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Solicitação de casos</relationshipLabel>
    <relationshipName>CaseRequest</relationshipName>
    <type>Lookup</type>
</CustomField>