force-app/main/default/objects/Case_Request__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Descreva o caso o mais detalhado possível.</description>
    <inlineHelpText>Coloque uma boa descrição que seja possível relembrar facilmente sobre o que se trata depois.</inlineHelpText>
    <label>Descrição</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>