force-app/main/default/objects/Case_Request__c/fields/Email_Web__c.field-meta.xml
<CustomField>
    <fullName>Email_Web__c</fullName>
    <label>Email Web</label>
    <type>Email</type>
</CustomField>