force-app/main/default/objects/Case_Request__c/fields/Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact__c</fullName>
    <label>Contato Emergencial</label>
    <length>80</length>
    <type>Text</type>
</CustomField>