force-app/main/default/objects/Case_Request__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <label>Impacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Usuário individual</fullName>
            </value>
            <value>
                <fullName>Setor</fullName>
            </value>
            <value>
                <fullName>Empresa inteira</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>