force-app/main/default/objects/Case_Request__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>A prioridade de um caso determina a situação em que ele se encontra.</description>
    <inlineHelpText>Verifique a descrição que colocou anteriormente e determine a prioridade para esse caso.</inlineHelpText>
    <label>Prioridade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <label>Baixa</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Média</label>
            </value>
            <value>
                <fullName>High</fullName>
                <label>Alta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>