force-app/main/default/objects/Case_Request__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Produto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Computador Desktop</fullName>
            </value>
            <value>
                <fullName>Notebook</fullName>
            </value>
            <value>
                <fullName>Servidor</fullName>
            </value>
            <value>
                <fullName>Impressora</fullName>
            </value>
            <value>
                <fullName>Roteador / Switch</fullName>
            </value>
            <value>
                <fullName>Sistema Operacional</fullName>
            </value>
            <value>
                <fullName>Software Corporativo</fullName>
            </value>
            <value>
                <fullName>Aplicativo Mobile</fullName>
            </value>
            <value>
                <fullName>Sistema de Backup</fullName>
            </value>
            <value>
                <fullName>Firewall / Antivírus</fullName>
            </value>
            <value>
                <fullName>Serviços em Nuvem</fullName>
            </value>
            <value>
                <fullName>Outros Equipamentos</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>