force-app/main/default/objects/Case_Request__c/fields/Resolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Notes__c</fullName>
    <description>É um campo para explicar como o caso foi resolvido.</description>
    <inlineHelpText>Explique como foi a solução do caso, suas facilidades e dificuldades.</inlineHelpText>
    <label>Notas de resolução</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>