force-app/main/default/objects/Case_Request__c/fields/Resolution_time__c.field-meta.xml
<CustomField>
    <fullName>Resolution_time__c</fullName>
    <label>Tempo de resolução</label>
    <type>Time</type>
</CustomField>