force-app/main/default/objects/Case_Request__c/fields/SLA_Deadline__c.field-meta.xml
<CustomField>
    <fullName>SLA_Deadline__c</fullName>
    <description>O SLA descreve métricas como tempo de atividade, tempo de entrega, tempo de resposta e tempo de resolução. Um SLA também detalha o curso de ação quando os requisitos não são atendidos, como suporte adicional ou descontos nos preços.</description>
    <inlineHelpText>Coloque o prazo de SLA para o caso.</inlineHelpText>
    <label>Prazo SLA</label>
    <type>DateTime</type>
</CustomField>