force-app/main/default/objects/Case_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>É o progresso que o caso se encontra no momento.</description>
    <inlineHelpText>Coloque o momento em que o caso se encontra no agora.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>Novo</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <label>Em progresso</label>
            </value>
            <value>
                <fullName>Escalated</fullName>
                <label>Escalado</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <label>Fechado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>