force-app/main/default/objects/Case_Request__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>O assunto geral sobre o que se trata o caso.</description>
    <inlineHelpText>Preencha um assunto que dê uma ideia geral do que se trata o caso.</inlineHelpText>
    <label>Assunto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>