force-app/main/default/objects/Case_Request__c/fields/ThirdPartySystemInvolved__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartySystemInvolved__c</fullName>
    <label>Sistema de Terceiros Envolvido</label>
    <length>80</length>
    <type>Text</type>
</CustomField>