force-app/main/default/objects/Case_Request__c/fields/Time_resolution_number__c.field-meta.xml
<CustomField>
    <fullName>Time_resolution_number__c</fullName>
    <formula>( ClosedDateTime__c -  CreatedDate ) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo de resolução em número</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>