force-app/main/default/objects/Case_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Tipo de suporte oferecido.</description>
    <inlineHelpText>Tipo de suporte oferecido.</inlineHelpText>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suporte Técnico</fullName>
            </value>
            <value>
                <fullName>Suporte a Software</fullName>
            </value>
            <value>
                <fullName>Suporte a Dispositivos Móveis</fullName>
            </value>
            <value>
                <fullName>Infraestrutura de Rede</fullName>
            </value>
            <value>
                <fullName>Segurança da Informação</fullName>
            </value>
            <value>
                <fullName>Consultoria Tecnológica</fullName>
            </value>
            <value>
                <fullName>Atendimento ao Usuário</fullName>
            </value>
            <value>
                <fullName>Treinamento e Capacitação</fullName>
            </value>
            <value>
                <fullName>Suporte em Nuvem</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>