force-app/main/default/objects/Case_Request__c/fields/WebCompany__c.field-meta.xml
<CustomField>
    <fullName>WebCompany__c</fullName>
    <label>Empresa Web</label>
    <length>80</length>
    <type>Text</type>
</CustomField>