force-app/main/default/objects/Case_Request__c/fields/WebName__c.field-meta.xml
<CustomField>
    <fullName>WebName__c</fullName>
    <label>Nome Web</label>
    <length>80</length>
    <type>Text</type>
</CustomField>