force-app/main/default/objects/Case_Request__c/fields/WebPhone__c.field-meta.xml
<CustomField>
    <fullName>WebPhone__c</fullName>
    <label>Telefone Web</label>
    <length>40</length>
    <type>Text</type>
</CustomField>