force-app/main/default/objects/Case_Request__c/validationRules/Only_Premium_can_reopen_a_case.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Premium_can_reopen_a_case</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(Status__c), &apos;Closed&apos;),
    NOT(ISPICKVAL(Status__c, &apos;Closed&apos;)),
    $User.UserRoleId &lt;&gt; &apos;00EgL000001k0Kb&apos;
)</errorConditionFormula>
    <errorMessage>Apenas usuários do suporte premium pode reabrir o caso! Contate alguém para pedir ajuda.</errorMessage>
</ValidationRule>