force-app/main/default/objects/Case_Request__c/validationRules/Prevent_Closed_On_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Closed_On_Create</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    ISPICKVAL(Status__c, &quot;Closed&quot;)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Não pode colocar o status como fechado ao criar um novo registro!</errorMessage>
</ValidationRule>