force-app/main/default/objects/Case_Request__c/validationRules/Status_closed_with_no_resolution_notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_closed_with_no_resolution_notes</fullName>
    <active>true</active>
    <description>O status é fechado sem o preenchimento das notas de resolução.</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Status__c, &apos;Closed&apos; ),
  ISBLANK( Resolution_Notes__c )
)</errorConditionFormula>
    <errorDisplayField>Resolution_Notes__c</errorDisplayField>
    <errorMessage>A nota de resolução deve ser preenchida!</errorMessage>
</ValidationRule>