force-app/main/default/objects/Case_Request__c/listViews/Casos.listView-meta.xml
<ListView>
    <fullName>Casos</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Casos</label>
</ListView>