force-app/main/default/objects/Case_Request__c/listViews/Premium_High_Case_Request.listView-meta.xml
<ListView>
    <fullName>Premium_High_Case_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Premium Low</label>
    <queue>Premium_Low</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>