force-app/main/default/objects/Case_Request__c/listViews/Premium_High_Case_Request1.listView-meta.xml
<ListView>
    <fullName>Premium_High_Case_Request1</fullName>
    <filterScope>Queue</filterScope>
    <label>Premium High</label>
    <queue>Premium_High</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>