force-app/main/default/objects/Case_Request__c/listViews/Premium_Medium_Case_Request.listView-meta.xml
<ListView>
    <fullName>Premium_Medium_Case_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Premium Medium</label>
    <queue>Premium_Medium</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>