force-app/main/default/objects/Case_Request__c/listViews/Standard_High_Case_Request.listView-meta.xml
<ListView>
    <fullName>Standard_High_Case_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Standard High</label>
    <queue>Standard_High</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>