force-app/main/default/objects/Case_Request__c/listViews/Standard_Medium_Case_Request.listView-meta.xml
<ListView>
    <fullName>Standard_Medium_Case_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Standard Low</label>
    <queue>Standard_Low</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>