force-app/main/default/objects/Case_Request__c/listViews/Standard_Medium_Case_Request1.listView-meta.xml
<ListView>
    <fullName>Standard_Medium_Case_Request1</fullName>
    <filterScope>Queue</filterScope>
    <label>Standard Medium</label>
    <queue>Standard_Medium</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>